fixed footer spacing

--- a/src/components/section/Section.module.css
+++ b/src/components/section/Section.module.css
@@ -1,6 +1,7 @@
 .section,
 .homeSection {
   padding: 8rem 2rem 0;
+  background-color: var(--bgColor);
 }
 
 .homeSection {
